# $Id$

nn-nn-12 - Version 5.1.19

  - Fix for Bug#61203, noAccessToProcedureBodies does not work anymore.

  - Fix for Bug#63811, pointless Socket.bind() when using ephemeral ports and interfaces, 
    which limits scalability on some platforms.
    
  - Connection.changeUser() would not check for closed connections, leading to NPEs when
    this method was called on a closed connection.
  
10-03-11 - Version 5.1.18
 
  - Fix for Bug#12565726, not putting the space between VALUES() and ON DUPLICATE KEY UPDATE
	causes C/J a) enter rewriting the query although it has ON UPDATE 
	and b) to generate the wrong query with multiple ON DUPLICATE KEY

  - Fix for Bug#12784170, "process fork failure" errors while running test suite via ant on Windows.
    Added new ant flag, com.mysql.jdbc.junit.fork, which controls whether JUnit will fork new processes
    for testing ("on", default and legacy behavior) or not ("off", required for Windows).  

  - Reverting changes made to ConnectionImpl.java,
    private boolean characterSetNamesMatches function.

  - Added function MYSQL_INDEX_TO_MYSQL_CHARSET to retrieve server charset name
    using index instead of parsing variables to CharsetMapping.java.

  - Completed fix for Bug#61201/12649557, fixed tests failures.
  
  - Fix for Bug#61201/12649557, Can't establish connection when url has
    sessionVariables and characterEncoding. Fix covers only MySQL server 4.1+
    
  - Fix for Bug#61501 - Calling Statement.cancel() on a statement that isn't
    currently executing will cause some later-executed query on the same
    connection to be cancelled unexpectedly. The driver now guards against this
    condition, but it is an underlying server issue. The MySQL statement "KILL QUERY"
    (which is what the driver uses to implement Statement.cancel()) is rather
    non-deterministic, and thus the use of Statement.cancel() should be avoided
    if possible.
    
  - Fix for Bug#61866/12791594 - Calling Statement.getWarnings() after